// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner should render 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 bzGMae"
    color="info"
  />
</div>
`;

exports[`Spinner should render a danger color 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 iBGfhv"
    color="danger"
  />
</div>
`;

exports[`Spinner should render a hint color 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 fBKBQy"
    color="hint"
  />
</div>
`;

exports[`Spinner should render a info color 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 bzGMae"
    color="info"
  />
</div>
`;

exports[`Spinner should render a large one 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 dZqhLq"
    color="info"
  />
</div>
`;

exports[`Spinner should render a small one 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 hDDQIC"
    color="info"
  />
</div>
`;

exports[`Spinner should render a success color 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 kPXTBF"
    color="success"
  />
</div>
`;

exports[`Spinner should render a warning color 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 IKotM"
    color="warning"
  />
</div>
`;
